SecurityPolicy: don't enforce remote security policies Device Type: use iPhone 4 user agent strings
Change-Id: Ic11f632f424026911b6a003bfc41dbe70f3ea20c

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,10 +15,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.email"
-    android:versionCode="222000"
-    android:versionName="2.2.2"
-    >
+    package="com.android.email">
 
     <original-package android:name="com.android.email" />
 
